Moved inputs to dedicated 'launcher' component. Received bubbles no longer shift elements on the page. Added a frame component that all bubbles will be displayed inside of.

--- a/src/app/bubble/bubble.component.scss
+++ b/src/app/bubble/bubble.component.scss
@@ -2,5 +2,5 @@
     height: 50px;
     width: 500px;
     border-radius: 10%;
-    // background-color: red;
+    position: absolute;
 }
